[gd_scene load_steps=6 format=3 uid="uid://ch6f423qmu4sj"]

[ext_resource type="Script" path="res://change_level.gd" id="1_khftf"]
[ext_resource type="Texture2D" uid="uid://cnapix7tlh78c" path="res://sprites/NEW/level_finisher.png" id="2_rk087"]
[ext_resource type="PackedScene" uid="uid://c26dcgataoc22" path="res://Transition/level_transition/level_transition.tscn" id="3_l7mwc"]
[ext_resource type="AudioStream" uid="uid://d056a63va2qqi" path="res://sound/unlock.ogg" id="4_cs5hn"]

[sub_resource type="SphereShape3D" id="SphereShape3D_7a1cn"]
radius = 0.2

[node name="change_level" type="Node3D"]
script = ExtResource("1_khftf")

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.133538, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_7a1cn")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.166216, 0)
billboard = 2
texture_filter = 0
texture = ExtResource("2_rk087")

[node name="root" parent="." instance=ExtResource("3_l7mwc")]

[node name="fade" parent="root/CanvasLayer" index="0"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -256.0
offset_right = 256.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" parent="root/CanvasLayer" index="1"]
visible = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_cs5hn")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="animation_finished" from="root/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]

[editable path="root"]
